<resources>
    <string name="main_text_sub">Temukan ikan Segar disini!</string>
    <string name="main_text_name">Hi Wildan</string>
    <string name="hint_search_bar">Cari ikan lain</string>
    <string name="main_label_selection">Ikan pilihan minggu ini</string>
    <string name="beli">Beli</string>
    <string name="main_label_product">Semua produk</string>
    <string name="main_btn_search">Cari</string>
    <string name="slide_up_filter_label">Filter Product</string>
    <string name="slide_up_area_label">Filter berdasarkan area</string>
    <string name="slide_up_komuditas_label">Filter berdasarkan komuditas</string>
    <string name="slide_up_btn_filter">Terapkan Filter</string>
    <string name="main_btn_add">Tambah Data</string>
    <string name="slide_up_add_label">Tambah Produk</string>
    <string name="comudity">Komuditas</string>
    <string name="provinsi_area">Provinsi Area</string>
    <string name="kota_area">Kota Area</string>
    <string name="ukuran_gramasi">Ukuran gramasi</string>
    <string name="harga">Harga</string>
    <string name="slide_up_btn_add">Tambah Barang</string>
</resources>