<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetFilter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="30dp"
    android:background="@drawable/bg_slide_up"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/search_field_bg"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/slideUpFilterLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/slide_up_filter_label"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/slideUpKomuditasLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/slide_up_komuditas_label"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slideUpFilterLabel"/>

        <HorizontalScrollView
            android:id="@+id/slideUpChipComudityScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/slideUpKomuditasLabel">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/slideUpChipGroupComidity"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/slideUpAreaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/slide_up_area_label"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slideUpChipComudityScroll"/>

        <HorizontalScrollView
            android:id="@+id/slideUpChipAreaScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/slideUpAreaLabel">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/slideUpChipGroupArea"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/slideUpBtnFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:layout_constraintTop_toBottomOf="@id/slideUpChipAreaScroll"
            android:layout_marginTop="24dp"
            app:cornerRadius="0dp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/slide_up_btn_filter"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>